# stat_collector

./: CMakeLists.txt  README.md
app/: client.cpp  client_main.cpp  server.cpp  server_main.cpp
include/client/: CaptureLib.h  CaptureTypes.h  Collector.h  CollectorThread.h  JsonConversion.h  StatClient.h  TrafficData.h  TrafficReader.h  TrafficStorage.h  TrafficWritter.h
include/client/capture/: AllDevs.h  Capture.h  SynchronizationData.h
include/collector/: Collector.h  CollectorThread.h  JsonConversion.h  TrafficData.h  TrafficReader.h  TrafficWritter.h  Utils.h
include/network/: ClientSocket.h  ISocket.h  ServerSocket.h  SocketConsts.h  SocketUtils.h  UnixStreamClient.h  UnixStreamServer.h
include/server/: IServerRunGuard.h  ServerRunGuard.h  StatServer.h
include/utils/: Consts.h  ISocket.h  ISystem.h  JsonConversion.h  Socket.h  SocketUtils.h  System.h  TimePrinter.h  TimeUtils.h  Types.h  Utils.h
lib/client/: CMakeLists.txt  CaptureLib.cpp  Collector.cpp  CollectorThread.cpp  JsonConversion.cpp  StatClient.cpp  TrafficData.cpp  TrafficReader.cpp  TrafficStorage.cpp  TrafficWritter.cpp
lib/collector/: CMakeLists.txt  Collector.cpp  CollectorThread.cpp  JsonConversion.cpp  TrafficReader.cpp  TrafficStorage.cpp  TrafficWritter.cpp  Utils.cpp
lib/network/: CMakeLists.txt  ClientSocket.cpp  ServerSocket.cpp  SocketUtils.cpp  UnixStreamClient.cpp  UnixStreamServer.cpp
lib/server/: CMakeLists.txt  StatServer.cpp
lib/utils/: CMakeLists.txt  JsonConversion.cpp  Socket.cpp  SocketUtils.cpp  System.cpp  TimePrinter.cpp  TimeUtils.cpp  Utils.cpp
src/client/: StatClient.cpp
src/client/capture/: AllDevs.cpp  Capture.cpp
src/server/: ServerRunGuard.cpp  StatServer.cpp
tests/: SocketUtilsTest.cpp  StatClientTest.cpp  StatServerTest.cpp  TimePrinterTest.cpp  TimeUtilsTest.cpp  TrafficDataTest.cpp  TrafficStorageTest.cpp  UtilsTest.cpp  main.cpp
tests/mocks/: ServerGuardMock.h  SocketMock.h  SystemMock.h
tests/test_data/: data.txt
